# playground

./: .gitignore  README.md  whisper-transcribe.sh
aoc-Rust/: Cargo.toml
aoc-Rust/src/: main.rs
aoc-Rust/src/2023/: 02.rs
bash/: aisay.sh  cheat.sh  stt.sh  tts-fix.sh  tts.sh
c/: linkedlist  linkedlist-improved  linkedlist-improved.c
clang/: linkedlist.c
embeddings/: embed_old.ipynb  urls.txt
js/: box.html  projection.html  projection.js  rays-improved.js  rays.html  rays.js  three-box.html  three-geometry.html  tut.js
js/with-or-without/: index.html
md/: spec.md  stt-doc.md  tts-doc.md
obsidian-tidy/: cleanup_attachments.sh  dupesleuth.sh  mover.sh  ripsed.sh
python/: aoc_2020_08.py  cracklepop.py  logprobs.ipynb  omni.py  pw.py  pyproject.toml  sigma.py
rust/minigrep/src/: lib.rs  main.rs
salvador/src/: App.svelte
salvador/src/routes/: +page.svelte
salvador/src/routes/api/generate/: +server.ts
three-js-template/: .gitignore  package-lock.json  vite.config.js
three-js-template/src/: index.html  main.js
weather-or-not/: README.md  data-v01.csv  data_gen.py
