[tool.poetry]
name = "playing"
version = "0.1.0"
description = "Playing around with stuff"
authors = ["Gianluca Truda <gianlucatruda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
numpy = "^1.24.3"
pandas = "^2.0.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipython-autotime = "^0.3.1"
cycler = "^0.11.0"
kiwisolver = "^1.4.4"
pillow = "^9.5.0"
pyparsing = "^3.0.9"
matplotlib = "^3.7.1"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"
jupyter-black = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
